--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -25,7 +25,7 @@ limitations under the License.
 <string name="copyright">Version 1.3 (c) 2009 Google Inc.</string>
 
 <string name="invalid_password">Oops! The password is invalid, please try again.</string>
-<string name="no_password">&lt;No password/PIN&gt;</string>
+<string name="no_password">&lt; No PIN &gt;</string>
 <string name="error_reset_password">Uh oh.  Unable to reset your password.</string>
 <string name="error_save_secrets">Uh oh.  Unable to save your secrets.</string>
 
@@ -70,7 +70,7 @@ When done, press the Back button, or MENU for more options.
 <string name="list_email_label">Email</string>
 <string name="list_notes_label">Notes</string>
 <string name="list_add_secret">Add secret</string>
-<string name="list_instructions">Tap secret to reveal password.  Tap and hold
+<string name="list_instructions">Tap secret to reveal its PIN.  Tap and hold
 to change it.</string>
 
 <string name="login_menu_reset_password">Reset password</string>
@@ -92,7 +92,7 @@ Continue anyway?
 
 <string name="edit_menu_import_secrets_message">Import successful.  Delete \'\'{0}\'\' now?</string>
 
-<string name="copied_to_clipboard">{0}\'\'s password has been copied to the clipboard.</string>
+<string name="copied_to_clipboard">{0}\'\'s PIN has been copied to the clipboard.</string>
 
 <string name="list_menu_add">Add</string>
 <string name="list_menu_edit">Edit</string>
