--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -1,17 +1,19 @@
 #summary Build environments
 #labels Phase-Implementation
 
-The source tree includes project files for building the application with Eclipse.
+The source tree includes project files for building the Android application and the accompanying AppEngine backup service with Eclipse.
 
-==Supported Platforms==
+<wiki:toc max_depth="3" />
 
-===Linux-based Environment===
+=Supported Platforms for Android Development=
+
+==Linux-based Environment==
   * Ubuntu 8.10 Intrepid Ibex
   * Eclipse 3.4.2, Build id: M20090211-1700
   * Android Development Toolkit 0.8.0v200809220836-110569
   * android-sdk-linux_x86-1.5_r1
 
-===Windows-based Environment===
+==Windows-based Environment==
   * Microsoft Windows XP SP2
   * Eclipse 3.4.0, Build id: M20080617-2000
   * Android Development Toolkit 0.8.0v200809220836-110569
@@ -27,3 +29,11 @@ To build Secrets for Android yourself, follow these steps:
   * start Eclipse and choose the menu item "File / Import..."
   * in the Import dialog choose "General / Existing Projects into Workspace" in the tree control
   * Press the "Next>" button and follow the instructions
+
+=Supported Platforms for !AppEngine Development=
+
+==Linux-based Environment==
+  * Ubuntu 8.10 Intrepid Ibex
+  * Eclipse 3.4.2, Build id: M20090211-1700
+  * Google !AppEngine SDK 1.2.2
+  * {{{[Optional]}}} Aptana Pydev Python Development Environment 1.4.4.2636
