Edited wiki page through web user interface.

--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -5,6 +5,7 @@ The source tree includes project files for building the Android application and 
 
 <wiki:toc max_depth="3" />
 
+<br/>
 =Supported Platforms for Android Development=
 
 ==Linux-based Environment==
@@ -30,10 +31,29 @@ To build Secrets for Android yourself, follow these steps:
   * in the Import dialog choose "General / Existing Projects into Workspace" in the tree control
   * Press the "Next>" button and follow the instructions
 
+
+<br/>
 =Supported Platforms for !AppEngine Development=
 
 ==Linux-based Environment==
   * Ubuntu 8.10 Intrepid Ibex
+  * Python 2.5.2
   * Eclipse 3.4.2, Build id: M20090211-1700
   * Google !AppEngine SDK 1.2.2
   * {{{[Optional]}}} Aptana Pydev Python Development Environment 1.4.4.2636
+
+==Building==
+
+To run a the backup server locally on your machine, run the following commands:
+
+{{{
+  $ cd ${SECRETS_HOME}
+  $ ${APPENGINE_HOME}/dev_appserver.py appengine/
+}}}
+
+After making any changes to the server, run the unit tests in another shell prompt with the commands:
+
+{{{
+  $ cd ${SECRETS_HOME}
+  $ python appengine/tests.py
+}}}
