--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -20,6 +20,12 @@ The source tree includes project files for building the Android application and 
   * Android Development Toolkit 0.8.0v200809220836-110569
   * android-sdk-windows-1.5_r1
 
+==Mac OSX Environment==
+  * OSX 10.5.7
+  * Eclipse 3.5.0, Build id: 20090619-0625
+  * Android Development Toolkit 0.9.1.v200905011822-1621
+  * android-sdk-mac_x86-1.5_r3
+
 Other platforms supported by Eclipse and the Android SDK should also work fine, please let me know.  Note that Secrets now uses some 1.5 specific APIs, so it will no longer build with the 1.1 SDK.
 
 ==Building==
@@ -31,6 +37,12 @@ To build Secrets for Android yourself, follow these steps:
   * in the Import dialog choose "General / Existing Projects into Workspace" in the tree control
   * Press the "Next>" button and follow the instructions
 
+Make sure that the project is set to target JDK 1.6, otherwise the @Override tags will generate compile time errors.  To verify this, do the following:
+
+  * select the secrets project in the Package Explorer
+  * choose menu item Project / Properties
+  * click on Java Compiler along the left-hand side
+  * make sure that the Compiler compliance level is set to 1.6
 
 <br/>
 =Supported Platforms for !AppEngine Development=
