--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -119,4 +119,8 @@ Continue anyway?
 <string name="log_viewed">Viewed</string>
 <string name="log_exported">Exported</string>
 
+<string name="error_missing_ciphers">Uh oh: can't save password is invalid.</string>
+<string name="error_cannot_move_existing">Uh oh: can't move existing file out of the way.</string>
+<string name="error_cannot_move_new">Uh oh: can't rename new file.</string>
+
 </resources>
