--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,7 +22,7 @@ limitations under the License.
 
 <!-- Whenever the version changes here, it must also be changed in
      the androidmanifest.xml file -->
-<string name="copyright">Version 1.4.6 (c) 2009 Google Inc.</string>
+<string name="copyright">Version 1.4.7 (c) 2009 Google Inc.</string>
 
 <string name="invalid_password">Oops! The password is invalid, please try again.</string>
 <string name="no_password">&lt; No PIN &gt;</string>
@@ -122,5 +122,6 @@ Continue anyway?
 <string name="error_missing_ciphers">Uh oh: can't save password is invalid.</string>
 <string name="error_cannot_move_existing">Uh oh: can't move existing file out of the way.</string>
 <string name="error_cannot_move_new">Uh oh: can't rename new file.</string>
+<string name="error_loading">Uh oh: a problem was encountered while loading your secrets.  Some data may be lost.</string>
 
 </resources>
