--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -6,22 +6,24 @@ The source tree includes project files for building the Android application with
 =Supported Platforms for Android Development=
 
 ==Linux-based Environment==
-  * Ubuntu 8.10 Intrepid Ibex
-  * Eclipse 3.4.2, Build id: M20090211-1700
-  * Android Development Toolkit 0.8.0v200809220836-110569
-  * android-sdk-linux_x86-1.5_r1
+  * [http://www.ubuntu.com/ Ubuntu 10.04 Lucid Lynx]
+  * [http://www.eclipse.org/downloads/ Eclipse 3.5.2, Build id: M20100211-1343]
+  * [http://developer.android.com/sdk/eclipse-adt.html Android Development Toolkit 8.0.1v201012062107-92219]
+  * [http://dl.google.com/android/android-sdk_r08-linux_86.tgz android-sdk_r08]
 
 ==Windows-based Environment==
+I no longer use Windows for development, so this information may be out of date.
+
   * Microsoft Windows XP SP2
-  * Eclipse 3.4.0, Build id: M20080617-2000
-  * Android Development Toolkit 0.8.0v200809220836-110569
-  * android-sdk-windows-1.5_r1
+  * [http://www.eclipse.org/downloads/ Eclipse 3.5]
+  * [http://developer.android.com/sdk/eclipse-adt.html Android Development Toolkit 8.0.1v201012062107-92219]
+  * [http://dl.google.com/android/installer_r08-windows.exe android-sdk_r08]
 
 ==Mac OSX Environment==
   * OSX 10.5.7
-  * Eclipse 3.5.0, Build id: 20090619-0625
-  * Android Development Toolkit 0.9.1.v200905011822-1621
-  * android-sdk-mac_x86-1.5_r3
+  * [http://www.eclipse.org/downloads/ Eclipse 3.5.0, Build id: 20090619-0625]
+  * [http://developer.android.com/sdk/eclipse-adt.html Android Development Toolkit 8.0.1v201012062107-92219]
+  * [http://dl.google.com/android/android-sdk_r08-mac_86.tgz android-sdk_r08]
 
 Other platforms supported by Eclipse and the Android SDK should also work fine, please let me know.  Note that Secrets now uses some 1.5 specific APIs, so it will no longer build with the 1.1 SDK.
 
