Edited wiki page OsaSyncMergeDesign through web user interface.

--- a/wiki/OsaSyncMergeDesign.wiki
+++ b/wiki/OsaSyncMergeDesign.wiki
@@ -1,4 +1,4 @@
-#summary A description of the sync/merge algorithm used with synchronizing between SfA and an OSA.
+#summary A description of the sync/merge algorithm used when synchronizing between SfA and an OSA.
 
 = Introduction =
 
