--- a/wiki/Upgrade.wiki
+++ b/wiki/Upgrade.wiki
@@ -6,27 +6,32 @@ Changing mobile phone seems inevitable.  Maybe the phone is lost or stolen, mayb
 
 This page describes two ways to ensure that your secrets make it to your new phone.  Note that for best results you will need to perform some actions before you stop using your existing phone.  Please take the time to follow the recommended steps below before disaster strikes!  These steps work for Android tablets as well.
 
-= Method 1: Online Backup =
+= Method 1: Online Backup to Google Account =
 
-Android provides a built-in mechanism to backup your apps and data to your Google account.  This is by far the easiest way to transfer secrets to a new phone.  It may also be the only way to do so in the case of lost, stolen or damaged phones.
+Android provides a built-in mechanism to backup your apps and data to your Google account.  This is by far the easier way to transfer secrets to a new phone.  It may also be the only way to do so in the case of lost, stolen or damaged phones.
 
 Online backup must be enabled before it will function and is normally done when you first configure your phone.  If you didn't do it then or want to check if its enabled, do the following:
 
-(steps for Android 4+)
+_Android 4+_
   * start the "Settings" apps
   * tap "Backup & reset"
   * make sure that the items "Back up my data" and "Automatic restore" are checked
+  * Take note of the email address listed under "Backup account" as this is the Google account that will store your phone's information.  Do this for your phone right now, and for all your new phones in the future.
 
-Take note of the email address listed under "Backup account" as this is the Google account that will store your phone's information.  Do this for your phone right now, and for all your new phones in the future.
+_Older Android versions_
+  * start the "Settings" apps
+  * tap "Accounts & sync"
+  * make sure that the items "Background data" and "Auto-sync" are checked
+  * Take note of the *first* email address listed under "Manage accounts" as this is the Google account that will store your phone's information.  Do this for your phone right now, and for all your new phones in the future.
 
-When you configure your new phone, make sure to use the same email address as was shown under "Backup account".  Most of your apps will automatically be restored, some even with their data.  In particular, *_Secrets for Android_* will be restored on your phone along with all your secrets.
+When you configure your new phone, make sure to use the same email address as noted above.  Most of your apps will automatically be restored, some even with their data.  In particular, *_Secrets for Android_* will be restored on your phone along with all your secrets.
 
 == Check the Online Backup ==
 
 To further check that backups are properly enabled, verify the state of the online information stored with your Google account:
 
   * open a web browser and go to the page https://www.google.com/dashboard
-  * make sure you are logged in with the account noted under "Backup account" above
+  * make sure you are logged in with the account noted above
   * scroll down to the section called "Android devices" and look for your phone
   * click the link "More data stored about this device" to see which apps have been backed up
 
@@ -36,7 +41,7 @@ Keep in mind that if you just enabled backups as described above, it may take a 
 
 = Method 2: Manual Transfer =
 
-If you are not using online backup, then you must manually transfer your secrets from your old phone to your new phone.  These instructions should apply to any phone running Android 2.3.3 or later.  A PC is also required.
+If you are not using online backup, then you must manually transfer your secrets from your old phone to your new phone.  These instructions should apply to any phone running Android 2.3.3 or later.  A Windows PC is also required.
 
 Before beginning, make sure that the USB computer connection mode on the phones --- both the old phone and new phone ---  is set correctly by doing the following:
 
@@ -65,6 +70,8 @@ _Copy backup to PC_
   * find the file called "secrets" and copy it to your computer's desktop
   * remove the USB cable from the phone and the PC
 
+|| Note: if the phone goes to sleep while connected to the PC, you will no longer be able to access files on it.  Simply wake it up. ||
+
 == Copying the backup file from the PC to your new phone ==
 _Copy backup to new phone_
   * if your new phone has an SD card slot, make sure you place an SD card in it
@@ -76,6 +83,8 @@ _Copy backup to new phone_
   * double click on "Internal storage"
   * copy the "secrets" file from your computer's desktop to the "Internal storage"
   * remove the USB cable from the phone and the PC
+
+|| Note: if the phone goes to sleep while connected to the PC, you will no longer be able to access files on it.  Simply wake it up. ||
 
 _Restore secrets on new phone_
   * install *_Secrets for Android_* on your new phone and enter the app
